# grace-hopper-2024-ai-chatbot

./: README.md  pyproject.toml
excercise-1-chatbot-rag-pdf/: README.md
excercise-2-knowledge-graph-rag/: README.md
excercises/chatbot-rag-pdf/: README.md  chat_ui.py  rag_pipeline.py
excercises/knowledge-graph-rag/: sample-text.txt
exercise-1-chatbot-rag-pdf/: README.md  rag_pipeline.py
exercise-1-chatbot-rag-pdf/jupyter-notebook/: RAG Pipeline Exercise-1.ipynb
exercise-2-knowledge-graph-rag/: README.md  knowledge-graph-rag.py
exercise-2-knowledge-graph-rag/jupyter-notebook/: RAG with Neo4j Knowledge Graph, Langchain and Gradio.ipynb
exercise-2-knowledge-graph-rag/jupyter-notebook/.ipynb_checkpoints/: RAG with Neo4j Knowledge Graph, Langchain and Gradio-checkpoint.ipynb
exercise-2-knowledge-graph-rag/jupyter-notebook/flagged/: log.csv
final_workshop_code/chatbot-rag-pdf/: README.md  rag_pipeline.py
final_workshop_code/knowledge-graph-rag/: Lumina.txt  knowledge-graph-rag.py
knowledge-graph-rag/: RAG with Neo4j Knowledge Graph, Langchain and Gradio.ipynb  knowledge-graph-rag.py
