[tool.poetry]
name = "grace-hopper-2024-ai-chatbot-main"
version = "0.1.0"
description = ""
authors = ["RishuK <rishuoberoi@gmail.com>", "Reeti Sarup <reeti.sarup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
